--- a/style.css
+++ b/style.css
@@ -3,9 +3,9 @@
 :root {
     --branco: white;
     --cor-de-fundo: #1b5798;
-    --fundo-senha: #00244D;
+    --fundo-senha: #48124e;
     --fundo-texto: #001E40;
-    --borda: #0075FF;
+    --borda: #214b7c;
     --roboto: 'Roboto', sans-serif;
     --roboto-mono: 'Roboto Mono', monospace;
 }
