--- a/style.css
+++ b/style.css
@@ -136,12 +136,12 @@ label {
 }
 
 .media {
-    background-color: #FAF408;
+    background-color: #193870;
     width: 50%;
 }
 
 .forte {
-    background-color: #00FF85;
+    background-color: #2b0a06;
     width: 100%;
 }
 
